--- a/src/components/index.css
+++ b/src/components/index.css
@@ -29,7 +29,7 @@
   }
   .Todo {
     display: flex;
-    width: 90%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding-top: 30px;
@@ -55,20 +55,33 @@
   .size {
     font-size: 30px;
   }
-  @media (max-width: 576px) {
+  @media (min-width: 576px) and (max-width:767px) {
     .todo-btn {
       width: 30%;
       font-size: 15px;
-      height: 40px;
+      height: 50px;
     }
     .todo-input {
-      height: 40px;
+      height: 50px;
       width: 70%;
       font-size: 20px;
       padding: 10px;
+      margin-left: 20px;
+    }
+    .Todo {
+      display: flex;
+      width: 95%;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 30px;
+      background-color: aqua;
+      padding: 10px;
+      border-radius: 10px;
+      margin-right: 20px;  
+      height: 45px;
     }
   }
-  @media (max-width: 768px) {
+  @media (min-width: 767px) {
     .todo-btn {
       width: 30%;
       font-size: 15px;
@@ -80,10 +93,22 @@
       font-size: 20px;
       padding: 10px;
     }
+    .Todo {
+      display: flex;
+      width: 95%;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 30px;
+      background-color: aqua;
+      padding: 10px;
+      border-radius: 10px;
+      margin-right: 10px;  
+      height: 60px;
+    }
   }
-  @media (max-width: 560px) {
+  @media (max-width: 567px) {
     .todo-btn {
-      width: 20%;
+      width: 23%;
       font-size: 12px;
       height: 40px;
     }
@@ -92,7 +117,22 @@
       width: 70%;
       font-size: 15px;
       padding: 10px;
+      margin-left: 20px;
     }
+    .Todo {
+      display: flex;
+      width: 92%;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 30px;
+      background-color: aqua;
+      padding: 10px;
+      border-radius: 10px;
+      margin-right:   30px;  
+      height: 40px;
+    }
+  
+
     h1 {
       font-size: 30px;
     }
